--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:theme="@style/Theme.AppCompat"
             android:name=".AddProductActivity">
         </activity>
+        <activity
+            android:theme="@style/Theme.AppCompat"
+            android:name=".InfoActivity">
+        </activity>
     </application>
 
 </manifest>
